// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders me correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          },
          undefined,
        ]
      }
    >
      Me
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ECEEF2",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
            "paddingTop": 6,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        corporis repellat ratione
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#3CC8E6",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#007398",
          "borderRadius": 10,
          "bottom": 16,
          "height": 20,
          "justifyContent": "center",
          "left": 20,
          "position": "absolute",
          "width": 20,
        }
      }
      testID="stepsCount"
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 13,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          }
        }
      >
        18626
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders person correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          },
          undefined,
        ]
      }
    >
      Gideon Heathcote
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ECEEF2",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
            "paddingTop": 6,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        nulla quam ipsam
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#3CC8E6",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#007398",
          "borderRadius": 10,
          "bottom": 16,
          "height": 20,
          "justifyContent": "center",
          "left": 20,
          "position": "absolute",
          "width": 20,
        }
      }
      testID="stepsCount"
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 13,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          }
        }
      >
        44345
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders person with no stage correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <SvgMock />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          },
          undefined,
        ]
      }
    >
      Gideon Heathcote
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="stageText"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ECEEF2",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 16,
                "paddingTop": 6,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "color": "#3CC8E6",
              },
            ]
          }
        >
          Add Stage
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#3CC8E6",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#007398",
          "borderRadius": 10,
          "bottom": 16,
          "height": 20,
          "justifyContent": "center",
          "left": 20,
          "position": "absolute",
          "width": 20,
        }
      }
      testID="stepsCount"
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 13,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          }
        }
      >
        44345
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders personal ministry with no steps correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "height": 70,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="personCard"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 6,
        "width": 54,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/forgivenIcon.png",
        }
      }
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 4,
      }
    }
  >
    <Text
      numberOfLines={2}
      style={
        Array [
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          },
          undefined,
        ]
      }
    >
      Gideon Heathcote
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ECEEF2",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
            "paddingTop": 6,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        nulla quam ipsam
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "height": 70,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 6,
        "paddingRight": 16,
      }
    }
    testID="stepIcon"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 30,
            },
            Object {
              "color": "#3CC8E6",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 14,
            },
            Object {
              "bottom": 16,
              "color": "#3CC8E6",
              "left": 24,
              "position": "absolute",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
